# gpu_prog

./: .gitignore  .gitmodules  LICENSE  README.md
task1/: CMakeLists.txt  readme.txt
task1/include/: hist_eq.h  img.h
task1/include/cpu/: hist_eq.h
task1/include/gpu/: hist_eq.h
task1/src/: hist_eq.cpp  hist_eq.cu  img.cpp  main.cpp  main_cpu.cpp  main_gpu.cpp  main_gpu.cu
task1/src/cpu/: hist_eq.cpp
task1/src/gpu/: hist_eq.cu
task2/: CMakeLists.txt  README.md  config.json  requirements.txt  train_sdf.ipynb
task2/data/NeuralNetworkWeights/: biases0.txt  biases1.txt  biases2.txt  biases3.txt  biases4.txt  weights0.txt  weights1.txt  weights2.txt  weights3.txt  weights4.txt
task2/data/NeuralNetworkWeightsCustom/: biases0.txt  biases1.txt  biases2.txt  biases3.txt  biases4.txt  weights0.txt  weights1.txt  weights2.txt  weights3.txt  weights4.txt
task2/include/: App.h  Camera.h  GLError.h  Light.h  ShaderProgram.h  common.h  forward.h  img.h
task2/include/Models/: Mesh.h
task2/include/ray_marching/: cuda_utils.h  nn_weights.h  ray_marching.h
task2/shaders/: fragmentQuadColor.glsl  vertexQuad.glsl
task2/src/: App.cpp  Camera.cpp  GLError.cpp  Light.cpp  ShaderProgram.cpp  forward.cu  glad.c  img.cpp  main.cpp
task2/src/Models/: Mesh.cpp
task2/src/ray_marching/: nn_weights.cpp  ray_marching.cu
